# framework.uifw.ise-web-helper-agent

./: CMakeLists.txt  ChangeLog  NOTICE  README  ise-web-helper-agent.efl  ise-web-helper-agent.xml
data/: ise-web-helper-agent.help
data/sample/: index.html
data/sample/css/: style.css
data/sample/js/: web-helper-client.js
packaging/: ise-web-helper-agent.spec
src/: common.cpp  ise.cpp  main.cpp  packages.cpp  web_container.cpp  web_container_plugin.cpp  web_helper_agent.cpp
src/include/: common.h  ise.h  packages.h  web_container.h  web_helper_agent.h
src/web_helper_agents/: direct.cpp  direct.h  websocket.cpp  websocket.h
